Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16268

per-server changelog mask change doesn't change effective mask in some cases

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      If per-server mask is changed from MINMASK to any other value then effective mask stays unchanged, though should be recalculated using by new server mask and all user masks

            tappro Mikhail Pershin
            tappro Mikhail Pershin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: